objects/com_smartsheet__DL_Queue2__c.object
<CustomObject>
    <fields>
        <fullName>com_smartsheet__batchId__c</fullName>
        <externalId>true</externalId>
        <label>batchId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__configId__c</fullName>
        <label>configId</label>
        <referenceTo>com_smartsheet__DL_Config__c</referenceTo>
        <relationshipLabel>DL_Queue2</relationshipLabel>
        <relationshipName>DL_Queue2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__json__c</fullName>
        <label>json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__status__c</fullName>
        <label>status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>new</fullName>
                    <default>true</default>
                    <label>new</label>
                </value>
                <value>
                    <fullName>queued</fullName>
                </value>
                <value>
                    <fullName>queued with Salesforce</fullName>
                </value>
                <value>
                    <fullName>processing</fullName>
                </value>
                <value>
                    <fullName>complete</fullName>
                </value>
                <value>
                    <fullName>canceled</fullName>
                </value>
                <value>
                    <fullName>error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>com_smartsheet__type__c</fullName>
        <label>type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DL_Queue2</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DL_Queue2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>